--- a/join.html
+++ b/join.html
@@ -12,7 +12,7 @@
         crossorigin="anonymous"></script>
     <script src="./assets/js/index.js"></script>
 
-    <link rel="stylesheet" href="./assets/css/index.css">
+    <link rel="stylesheet" href="./assets/css/join.css">
     <title>LuloSoft</title>
 </head>
 
@@ -40,50 +40,163 @@
         </div>
     </nav>
 
-
+    <!-- Masthead-->
+    <div class="masterOverlay">
+    </div>
+    <header class="masthead">
+        <div class="container h-100">
+            <div class="row">
+                <div class="title col-sm">
+                    <p>Join</p>
+                    <p>the fun<span class="orange">.</span></p>
+                </div>
+            </div>
+        </div>
+    </header>
+    <div id="discoverFun">
+        <div class="container">
+            <div class="row centered" style="margin: auto">
+                <p class="underline">DISCOVER THE FUN</p>
+            </div>
+            <div class="row centered" style="margin: auto">
+                <p class="title boldText black">Why Lulosoft <span class="green">.</span></p>
+            </div>
+            <div class="row centered margin">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos sint adipisci est corrupti in asperiores
+                    excepturi esse nostrum magnam illum error, porro quia inventore fuga eum, sed facere nesciunt cum?
+                </p>
+            </div>
+            <div class="row" style="margin: auto"></div>
+        </div>
+    </div>
+    <div id="jobs">
+        <div class="container">
+            <div class="row">Job offers</div>
+            <div class="row title black margin">
+                <p>We are looking for the best<span class="orange">.</span></p>
+                <p>Join the team<span class="green">.</span></p>
+            </div>
+            <div class="row">
+                <div class="col-sm">
+                    <div class="accordion" id="myAccordion">
+                        <div class="card">
+                            <div class="card-header" id="headingOne">
+                                <h2 class="mb-0">
+                                    <button type="button" class="btn btn-link" data-toggle="collapse"
+                                        data-target="#collapseOne">Senior Mobile Developer</button>
+                                </h2>
+                            </div>
+                            <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
+                                data-parent="#myAccordion">
+                                <div class="card-body">
+                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore nesciunt amet
+                                        quo aliquam dolores similique id accusamus. Exercitationem, ut qui omnis, iure
+                                        dolorem aperiam et, cupiditate ab aliquam impedit dicta</p>
+                                    <div class="col-sm" align="center">
+                                        <a class="learnButton" href="https://www.w3schools.com">Learn more about it.
+                                            <img src="./assets/images/Home/ic_arrow_right_white_58px.svg" alt=""
+                                                style="width: 20px;" srcset="">
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="accordion" id="myAccordion">
+                        <div class="card">
+                            <div class="card-header" id="headingTwo">
+                                <h2 class="mb-0">
+                                    <button type="button" class="btn btn-link collapsed" data-toggle="collapse"
+                                        data-target="#collapseTwo">Jumior Java Developer</button>
+                                </h2>
+                            </div>
+                            <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo"
+                                data-parent="#myAccordion">
+                                <div class="card-body">
+                                    <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur earum
+                                        beatae pariatur voluptates magni labore quidem fugiat? Enim nulla ipsum sed
+                                        earum doloremque numquam labore eos rerum delectus. Consequatur, deleniti!</p>
+                                    <div class="col-sm" align="center">
+                                        <a class="learnButton" href="https://www.w3schools.com">Learn more about it.
+                                            <img src="./assets/images/Home/ic_arrow_right_white_58px.svg" alt=""
+                                                style="width: 20px;" srcset="">
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <!-- footer -->
     <footer>
         <div class="container">
-            <div class="row boldText white">Do you think we are the partner you need?</div>
-            <div class="row orange boldText">Dont be shy!</div>
+            <div class="row boldText white centered">
+                <p>Do you think we are the partner you need?</p>
+            </div>
+            <div class="row orange boldText centered">
+                <p>Dont be shy!</p>
+            </div>
             <div class="row">
                 <div class="col-sm">
                     <div class="row">
                         <div class="col-sm">
-                            <div class="row boldText white">CALI</div>
-                            <div class="row">Alexander Perea</div>
-                            <div class="row">
-                                <span class="boldText white">(+57)</span>3183248120
+                            <div class="row boldText white centered">CALI</div>
+                            <div class="row centered">Alexander Perea</div>
+                            <div class="row centered">
+                                <span class="boldText white">(+57) </span>3183248120
                             </div>
                         </div>
                         <div class="col-sm">
-                            <div class="row boldText white">ATLANTA</div>
-                            <div class="row">Laura Perea</div>
-                            <div class="row">
-                                <span class="boldText white">(786)</span>3553310
+                            <div class="row boldText white centered">ATLANTA</div>
+                            <div class="row centered">Laura Perea</div>
+                            <div class="row centered">
+                                <span class="boldText white">(786) </span>3553310
                             </div>
                         </div>
                         <div class="col-sm">
-                            <div class="row boldText white">LOUISVILLE</div>
-                            <div class="row">Juan Espinosa</div>
-                            <div class="row">
-                                <span class="boldText white">(956)</span>2541148
+                            <div class="row centered boldText white">LOUISVILLE</div>
+                            <div class="row centered">Juan Espinosa</div>
+                            <div class="row centered">
+                                <span class="boldText white">(956) </span>2541148
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm">
                     <img src="" alt="" srcset="">
-                    <div class="row">
+                    <div class="row centered">
                         <div class="col-sm-3 boldText white">Terms and conditions</div>
                         <div class="col-sm-3 boldText white">Privacy policy</div>
-                        <div class="col-3">twitter</div>
-                        <div class="col-3">linkedin</div>
+                        <div class="col-3 centered">
+                            <a href="https://twitter.com/lulo_soft">
+                                <img border="0" alt="Twitter" src="./assets/images/Home/logo_twitter.svg" width="25"
+                                    height="25">
+                            </a>
+                        </div>
+                        <div class="col-3 centered">
+                            <a href="https://www.linkedin.com/company/lulosoft-llc/">
+                                <img src="./assets/images/Home/logo_linkedin.svg" width="25" height="25">
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164069556-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-164069556-1');
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
