job application almost

--- a/jobVacancy.html
+++ b/jobVacancy.html
@@ -12,7 +12,7 @@
         crossorigin="anonymous"></script>
     <script src="./assets/js/index.js"></script>
 
-    <link rel="stylesheet" href="./assets/css/index.css">
+    <link rel="stylesheet" href="./assets/css/jobVacancy.css">
     <title>LuloSoft</title>
 </head>
 
@@ -40,50 +40,135 @@
         </div>
     </nav>
 
+    <div id="jobVacancy">
+        <div class="container">
+            <div class="row margin">
+                <p class="boldText black title">Senior Mobile Developer<span class="orange">.</span></p>
+            </div>
+            <div class="row">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod beatae perferendis explicabo nulla
+                    veritatis. Illo earum, quae ut ea similique assumenda iste, exercitationem quidem velit saepe,
+                    architecto itaque et labore!</p>
+            </div>
+            <div class="row">
+                <div class="col-sm">
+                    <div class="row">
+                        <p class="black">You Will Be</p>
+                        <ul>
+                            <li>Working closely on various projects.</li>
+                            <li>Supporting multiple applications.</li>
+                            <li>Developing technical concepts and working to make them more effective.</li>
+                        </ul>
+                    </div>
+                    <div class="row">
+                        <p>You must have</p>
+                        <ul>
+                            <li>English is a requirement. Candidates unable to clearly comunicate ideas in english
+                                wont be considered for this role.</li>
+                            <li>Bachelors degree is required, Candidates without a proffesional degree wont be
+                                considered for the role</li>
+                        </ul>
+                    </div>
+                    <div class="row">
+                        <p>Technical requirements for the role</p>
+                        <ul>
+                            <li>3-5 year experience.</li>
+                            <li>At least 3 years of mobile app development.</li>
+                            <li>Experience with at least one hybrid mobile app development framework, such as React
+                                Native, flutter and Ionic.</li>
+                            <li>Stron Object-Oriented programming skills.</li>
+                            <li>Interest in web and cloud technologies.</li>
+                            <li>Experienced with Agile framework and ability to apply best practices using industry
+                                standards in the development process.</li>
+                        </ul>
+                    </div>
+                    <div class="row"></div>
+                </div>
+                <div class="col-sm">
+                    <div class="smallRectangle">
+                        <div class="row margin">
+                            <p class="title black">Do you have any questions?</p>
+                        </div>
+                        <div class="row margin">
+                            <p>
+                                <span class="orange">Dont worry!</span> contact us and we will be happy to talk to you.
+                            </p>
+                        </div>
+                        <div class="row margin">
+                            <p class="boldText">(786) 355 3310</p>
+                        </div>
+                        <div class="row margin"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- footer -->
     <footer>
         <div class="container">
-            <div class="row boldText white">Do you think we are the partner you need?</div>
-            <div class="row orange boldText">Dont be shy!</div>
+            <div class="row boldText white centered">
+                <p>Do you think we are the partner you need?</p>
+            </div>
+            <div class="row orange boldText centered">
+                <p>Dont be shy!</p>
+            </div>
             <div class="row">
                 <div class="col-sm">
                     <div class="row">
                         <div class="col-sm">
-                            <div class="row boldText white">CALI</div>
-                            <div class="row">Alexander Perea</div>
-                            <div class="row">
-                                <span class="boldText white">(+57)</span>3183248120
+                            <div class="row boldText white centered">CALI</div>
+                            <div class="row centered">Alexander Perea</div>
+                            <div class="row centered">
+                                <span class="boldText white">(+57) </span>3183248120
                             </div>
                         </div>
                         <div class="col-sm">
-                            <div class="row boldText white">ATLANTA</div>
-                            <div class="row">Laura Perea</div>
-                            <div class="row">
-                                <span class="boldText white">(786)</span>3553310
+                            <div class="row boldText white centered">ATLANTA</div>
+                            <div class="row centered">Laura Perea</div>
+                            <div class="row centered">
+                                <span class="boldText white">(786) </span>3553310
                             </div>
                         </div>
                         <div class="col-sm">
-                            <div class="row boldText white">LOUISVILLE</div>
-                            <div class="row">Juan Espinosa</div>
-                            <div class="row">
-                                <span class="boldText white">(956)</span>2541148
+                            <div class="row centered boldText white">LOUISVILLE</div>
+                            <div class="row centered">Juan Espinosa</div>
+                            <div class="row centered">
+                                <span class="boldText white">(956) </span>2541148
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm">
                     <img src="" alt="" srcset="">
-                    <div class="row">
+                    <div class="row centered">
                         <div class="col-sm-3 boldText white">Terms and conditions</div>
                         <div class="col-sm-3 boldText white">Privacy policy</div>
-                        <div class="col-3">twitter</div>
-                        <div class="col-3">linkedin</div>
+                        <div class="col-3 centered">
+                            <a href="https://twitter.com/lulo_soft">
+                                <img border="0" alt="Twitter" src="./assets/images/Home/logo_twitter.svg" width="25"
+                                    height="25">
+                            </a>
+                        </div>
+                        <div class="col-3 centered">
+                            <a href="https://www.linkedin.com/company/lulosoft-llc/">
+                                <img src="./assets/images/Home/logo_linkedin.svg" width="25" height="25">
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164069556-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-164069556-1');
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
