--- a/join.html
+++ b/join.html
@@ -72,28 +72,25 @@
     <div id="jobs">
         <div class="container">
             <div class="row">Job offers</div>
-            <div class="row title black margin">
-                <p>We are looking for the best<span class="orange">.</span></p>
-                <p>Join the team<span class="green">.</span></p>
-            </div>
+            <p class="title black margin">We are looking for the best<span class="orange">.</span></p>
+            <p class="title black margin">Join the team<span class="green">.</span></p>
             <div class="row">
                 <div class="col-sm">
-                    <div class="accordion" id="myAccordion">
+                    <div id="accordion">
                         <div class="card">
-                            <div class="card-header" id="headingOne">
-                                <h2 class="mb-0">
-                                    <button type="button" class="btn btn-link" data-toggle="collapse"
-                                        data-target="#collapseOne">Senior Mobile Developer</button>
-                                </h2>
+                            <div class="card-header">
+                                <a class="card-link boldText black" data-toggle="collapse" href="#collapseOne">
+                                    Senior Mobile Developer
+                                </a>
                             </div>
-                            <div id="collapseOne" class="collapse" aria-labelledby="headingOne"
-                                data-parent="#myAccordion">
+                            <div id="collapseOne" class="collapse show" data-parent="#accordion">
                                 <div class="card-body">
-                                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tempore nesciunt amet
-                                        quo aliquam dolores similique id accusamus. Exercitationem, ut qui omnis, iure
-                                        dolorem aperiam et, cupiditate ab aliquam impedit dicta</p>
-                                    <div class="col-sm" align="center">
-                                        <a class="learnButton" href="https://www.w3schools.com">Learn more about it.
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                        nostrud
+                                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                    <div class="col-sm buttonMargin" align="center">
+                                        <a class="learnButton" href="./jobVacancy.html">APPLY NOW
                                             <img src="./assets/images/Home/ic_arrow_right_white_58px.svg" alt=""
                                                 style="width: 20px;" srcset="">
                                         </a>
@@ -104,22 +101,129 @@
                     </div>
                 </div>
                 <div class="col-sm">
-                    <div class="accordion" id="myAccordion">
+                    <div id="accordion">
                         <div class="card">
-                            <div class="card-header" id="headingTwo">
-                                <h2 class="mb-0">
-                                    <button type="button" class="btn btn-link collapsed" data-toggle="collapse"
-                                        data-target="#collapseTwo">Jumior Java Developer</button>
-                                </h2>
+                            <div class="card-header">
+                                <a class="card-link boldText black" data-toggle="collapse" href="#collapseTwo">
+                                    Junior Java Developer
+                                </a>
                             </div>
-                            <div id="collapseTwo" class="collapse show" aria-labelledby="headingTwo"
-                                data-parent="#myAccordion">
+                            <div id="collapseTwo" class="collapse show" data-parent="#accordion">
                                 <div class="card-body">
-                                    <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aspernatur earum
-                                        beatae pariatur voluptates magni labore quidem fugiat? Enim nulla ipsum sed
-                                        earum doloremque numquam labore eos rerum delectus. Consequatur, deleniti!</p>
-                                    <div class="col-sm" align="center">
-                                        <a class="learnButton" href="https://www.w3schools.com">Learn more about it.
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                        nostrud
+                                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                    <div class="col-sm buttonMargin" align="center">
+                                        <a class="learnButton" href="./jobVacancy.html">APPLY NOW
+                                            <img src="./assets/images/Home/ic_arrow_right_white_58px.svg" alt=""
+                                                style="width: 20px;" srcset="">
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm">
+                    <div id="accordion">
+                        <div class="card">
+                            <div class="card-header">
+                                <a class="collapsed card-link boldText black" data-toggle="collapse"
+                                    href="#collapseThree">
+                                    Full Stack Developer
+                                </a>
+                            </div>
+                            <div id="collapseThree" class="collapse show" data-parent="#accordion">
+                                <div class="card-body">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                        nostrud
+                                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                    <div class="col-sm buttonMargin" align="center">
+                                        <a class="learnButton" href="./jobVacancy.html">APPLY NOW
+                                            <img src="./assets/images/Home/ic_arrow_right_white_58px.svg" alt=""
+                                                style="width: 20px;" srcset="">
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div id="accordion">
+                        <div class="card">
+                            <div class="card-header">
+                                <a class="collapsed card-link boldText black" data-toggle="collapse"
+                                    href="#collapseFour">
+                                    Front End Developer
+                                </a>
+                            </div>
+                            <div id="collapseFour" class="collapse show" data-parent="#accordion">
+                                <div class="card-body">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                        nostrud
+                                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                    <div class="col-sm buttonMargin" align="center">
+                                        <a class="learnButton" href="./jobVacancy.html">Learn more about it.
+                                            <img src="./assets/images/Home/ic_arrow_right_white_58px.svg" alt=""
+                                                style="width: 20px;" srcset="">
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm">
+                    <div id="accordion">
+                        <div class="card">
+                            <div class="card-header">
+                                <a class="collapsed card-link boldText black" data-toggle="collapse"
+                                    href="#collapseFive">
+                                    Back End Developer
+                                </a>
+                            </div>
+                            <div id="collapseFive" class="collapse show" data-parent="#accordion">
+                                <div class="card-body">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                        nostrud
+                                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                    <div class="col-sm buttonMargin" align="center">
+                                        <a class="learnButton" href="./jobVacancy.html">APPLY NOW
+                                            <img src="./assets/images/Home/ic_arrow_right_white_58px.svg" alt=""
+                                                style="width: 20px;" srcset="">
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div id="accordion">
+                        <div class="card">
+                            <div class="card-header">
+                                <a class="collapsed card-link boldText black" data-toggle="collapse"
+                                    href="#collapseSix">
+                                    Web Designer
+                                </a>
+                            </div>
+                            <div id="collapseSix" class="collapse show" data-parent="#accordion">
+                                <div class="card-body">
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                                        incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
+                                        nostrud
+                                        exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                    <div class="col-sm buttonMargin" align="center">
+                                        <a class="learnButton" href="./jobVacancy.html">APPLY NOW
                                             <img src="./assets/images/Home/ic_arrow_right_white_58px.svg" alt=""
                                                 style="width: 20px;" srcset="">
                                         </a>
