--- a/jobVacancy.html
+++ b/jobVacancy.html
@@ -45,15 +45,15 @@
             <div class="row margin">
                 <p class="boldText black title">Senior Mobile Developer<span class="orange">.</span></p>
             </div>
-            <div class="row">
+            <div class="row margin">
                 <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod beatae perferendis explicabo nulla
                     veritatis. Illo earum, quae ut ea similique assumenda iste, exercitationem quidem velit saepe,
                     architecto itaque et labore!</p>
             </div>
-            <div class="row">
+            <div class="row margin">
                 <div class="col-sm">
                     <div class="row">
-                        <p class="black">You Will Be</p>
+                        <p class="boldText">You Will Be</p>
                         <ul>
                             <li>Working closely on various projects.</li>
                             <li>Supporting multiple applications.</li>
@@ -61,7 +61,7 @@
                         </ul>
                     </div>
                     <div class="row">
-                        <p>You must have</p>
+                        <p class="boldText">You must have</p>
                         <ul>
                             <li>English is a requirement. Candidates unable to clearly comunicate ideas in english
                                 wont be considered for this role.</li>
@@ -70,7 +70,7 @@
                         </ul>
                     </div>
                     <div class="row">
-                        <p>Technical requirements for the role</p>
+                        <p class="boldText">Technical requirements for the role</p>
                         <ul>
                             <li>3-5 year experience.</li>
                             <li>At least 3 years of mobile app development.</li>
@@ -82,7 +82,15 @@
                                 standards in the development process.</li>
                         </ul>
                     </div>
-                    <div class="row"></div>
+                    <div class="row">
+                        <p class="boldText">Preferred</p>
+                        <ul>
+                            <li>Native IOS development experience.</li>
+                            <li>Native Android development.</li>
+                            <li>Exposure to java 7+, Spring MVC/Struts, JDBC, Hibernate, Eclipse, Web Services (XML,
+                                SOAP/RESTful, Apache CXF) and GIT.</li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="col-sm">
                     <div class="smallRectangle">
@@ -97,7 +105,7 @@
                         <div class="row margin">
                             <p class="boldText">(786) 355 3310</p>
                         </div>
-                        <div class="row margin"></div>
+                        <div class="row margin"><a href="mailto:contact@lulosoft.com">contact@lulosoft.com</a></div>
                     </div>
                 </div>
             </div>
