--- a/jobVacancy.html
+++ b/jobVacancy.html
@@ -111,6 +111,48 @@
             </div>
         </div>
     </div>
+    <div id="apply">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <p class="boldText black title">Dont hesitate <br> And apply here<span class="green">.</span></p>
+                </div>
+                <div class="col-sm">
+                    <form action method="post">
+                        <div class="row">
+                            <div class="input_col col-sm">
+                                <input type="text" placeholder="Name">
+                            </div>
+                            <div class="input_col col-sm">
+                                <input type="text" placeholder="Last Name">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="input_col col-sm">
+                                <input type="text" placeholder="Email">
+                            </div>
+                            <div class="input_col col-sm">
+                                <input type="text" placeholder="Phone Number">
+                            </div>
+                        </div>
+                        <div class="form-group file-area">
+                            <input type="file" name="CV" id="CV" required="required" multiple="multiple" />
+                            <div class="file-dummy">
+                                <div class="success">file selected</div>
+                                <div class="default">
+                                    <p class="boldText">Upload your resume.</p>
+                                    <p>Drop file or <span class="green">click here</span> to upload.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <button type="submit">Upload images</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- footer -->
     <footer>
